tests/ui/higher-ranked/trait-bounds/hrtb-conflate-regions.stderr
error: higher-ranked subtype error
  --> $DIR/hrtb-conflate-regions.rs:27:10
   |
LL | fn b() { want_foo2::<SomeStruct>(); }
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^

error: higher-ranked subtype error
  --> $DIR/hrtb-conflate-regions.rs:27:10
   |
LL | fn b() { want_foo2::<SomeStruct>(); }
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 2 previous errors

